--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue": "^2.6.14",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.1",
+    "vuex": "^3.6.2",
     "webpack-permissions-plugin": "^1.0.8"
   },
   "devDependencies": {
