--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "viewer",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "private": true,
   "scripts": {
     "mdToHtml": "node mdToHtml.js",
@@ -20,14 +20,18 @@
     "core-js": "^3.8.3",
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
+    "electron-as-wallpaper": "^1.0.3",
     "element-ui": "^2.15.13",
     "express": "4.18",
+    "express-ws": "^5.0.2",
     "fluent-ffmpeg": "^2.1.2",
+    "flv.js": "^1.6.2",
     "iconv-lite": "^0.6.3",
     "markdown-it": "^13.0.1",
     "md5": "^2.3.0",
     "multer": "^2.0.0-rc.4",
     "multiparty": "^4.2.3",
+    "node-media-server": "^2.6.2",
     "path-browserify": "^1.0.1",
     "qrcode": "^1.5.1",
     "serve-index": "^1.9.1",
