--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 /node_modules
 /dist_electron
 /public/mpv/mpv.exe
-/public/ffmpeg
+# /public/ffmpeg
 /public/whisper-cpp/model
 /install_whisper.md
