--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "qrcode": "^1.5.1",
     "serve-index": "^1.9.1",
     "tree-node-cli": "^1.6.0",
+    "vditor": "^3.9.7",
     "vue": "^2.6.14",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.1",
