--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "viewer",
-  "version": "0.3.3",
+  "version": "0.3.5",
   "private": true,
   "scripts": {
     "mdToHtml": "node mdToHtml.js",
@@ -17,10 +17,13 @@
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "core-js": "^3.8.3",
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
     "electron-as-wallpaper": "^1.0.3",
+    "electron-screenshots": "^0.5.27",
     "element-ui": "^2.15.13",
     "express": "4.18",
     "express-ws": "^5.0.2",
@@ -35,6 +38,7 @@
     "path-browserify": "^1.0.1",
     "qrcode": "^1.5.1",
     "serve-index": "^1.9.1",
+    "tree-kill": "^1.2.2",
     "tree-node-cli": "^1.6.0",
     "vditor": "^3.9.7",
     "vue": "^2.6.14",
