--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "viewer",
-  "version": "0.3.5",
+  "version": "0.3.7",
   "private": true,
   "scripts": {
     "mdToHtml": "node mdToHtml.js",
@@ -32,6 +32,8 @@
     "iconv-lite": "^0.6.3",
     "markdown-it": "^13.0.1",
     "md5": "^2.3.0",
+    "monaco-editor": "^0.52.2",
+    "monaco-editor-webpack-plugin": "^7.1.0",
     "multer": "^2.0.0-rc.4",
     "multiparty": "^4.2.3",
     "node-media-server": "^2.6.2",
@@ -58,7 +60,9 @@
     "less-loader": "^8.0.0",
     "video.js": "^7.20.1",
     "vue-cli-plugin-electron-builder": "~2.1.1",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   },
   "browserslist": [
     "> 1%",
